@@ -26,7 +26,7 @@ public final class StorageResourceInfosOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 StorageResourceInfosOuterClass.class.getName());
     }
@@ -61,7 +61,7 @@ public final class StorageResourceInfosOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_StorageResourceInfos_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_StorageResourceInfos_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_StorageResourceInfos_descriptor,
