@@ -26,7 +26,7 @@ public final class UserOnlineStatusesOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 UserOnlineStatusesOuterClass.class.getName());
     }
@@ -60,7 +60,7 @@ public final class UserOnlineStatusesOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UserOnlineStatuses_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UserOnlineStatuses_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UserOnlineStatuses_descriptor,
