@@ -26,7 +26,7 @@ public final class QueryMeetingsRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryMeetingsRequestOuterClass.class.getName());
     }
@@ -48,22 +48,26 @@ public final class QueryMeetingsRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n/request/conference/query_meetings_requ"
-                + "est.proto\022\016im.turms.proto\"\207\002\n\024QueryMeeti"
-                + "ngsRequest\022\013\n\003ids\030\001 \003(\003\022\023\n\013creator_ids\030\002"
-                + " \003(\003\022\020\n\010user_ids\030\003 \003(\003\022\021\n\tgroup_ids\030\004 \003("
-                + "\003\022 \n\023creation_date_start\030\005 \001(\003H\000\210\001\001\022\036\n\021c"
-                + "reation_date_end\030\006 \001(\003H\001\210\001\001\022\021\n\004skip\030\n \001("
-                + "\005H\002\210\001\001\022\022\n\005limit\030\013 \001(\005H\003\210\001\001B\026\n\024_creation_"
-                + "date_startB\024\n\022_creation_date_endB\007\n\005_ski"
-                + "pB\010\n\006_limitBB\n;im.turms.server.common.ac"
-                + "cess.client.dto.request.conferenceP\001\272\002\000b"
-                + "\006proto3"};
+                + "est.proto\022\016im.turms.proto\032\030model/common/"
+                + "value.proto\"\271\002\n\024QueryMeetingsRequest\022\013\n\003"
+                + "ids\030\001 \003(\003\022\023\n\013creator_ids\030\002 \003(\003\022\020\n\010user_i"
+                + "ds\030\003 \003(\003\022\021\n\tgroup_ids\030\004 \003(\003\022 \n\023creation_"
+                + "date_start\030\005 \001(\003H\000\210\001\001\022\036\n\021creation_date_e"
+                + "nd\030\006 \001(\003H\001\210\001\001\022\021\n\004skip\030\n \001(\005H\002\210\001\001\022\022\n\005limi"
+                + "t\030\013 \001(\005H\003\210\001\001\0220\n\021custom_attributes\030\017 \003(\0132"
+                + "\025.im.turms.proto.ValueB\026\n\024_creation_date"
+                + "_startB\024\n\022_creation_date_endB\007\n\005_skipB\010\n"
+                + "\006_limitBB\n;im.turms.server.common.access"
+                + ".client.dto.request.conferenceP\001\272\002\000b\006pro"
+                + "to3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryMeetingsRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryMeetingsRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryMeetingsRequest_descriptor,
@@ -74,8 +78,10 @@ public final class QueryMeetingsRequestOuterClass {
                                 "CreationDateStart",
                                 "CreationDateEnd",
                                 "Skip",
-                                "Limit",});
+                                "Limit",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
