@@ -26,7 +26,7 @@ public final class QueryConversationsRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryConversationsRequestOuterClass.class.getName());
     }
@@ -48,22 +48,27 @@ public final class QueryConversationsRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n6request/conversation/query_conversatio"
-                + "ns_request.proto\022\016im.turms.proto\"@\n\031Quer"
-                + "yConversationsRequest\022\020\n\010user_ids\030\001 \003(\003\022"
-                + "\021\n\tgroup_ids\030\002 \003(\003BD\n=im.turms.server.co"
-                + "mmon.access.client.dto.request.conversat"
-                + "ionP\001\272\002\000b\006proto3"};
+                + "ns_request.proto\022\016im.turms.proto\032\030model/"
+                + "common/value.proto\"r\n\031QueryConversations"
+                + "Request\022\020\n\010user_ids\030\001 \003(\003\022\021\n\tgroup_ids\030\002"
+                + " \003(\003\0220\n\021custom_attributes\030\017 \003(\0132\025.im.tur"
+                + "ms.proto.ValueBD\n=im.turms.server.common"
+                + ".access.client.dto.request.conversationP"
+                + "\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryConversationsRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryConversationsRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryConversationsRequest_descriptor,
-                        new java.lang.String[]{"UserIds", "GroupIds",});
+                        new java.lang.String[]{"UserIds", "GroupIds", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
