@@ -26,7 +26,7 @@ public final class QueryGroupsRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryGroupsRequestOuterClass.class.getName());
     }
@@ -48,20 +48,24 @@ public final class QueryGroupsRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n(request/group/query_groups_request.pro"
-                + "to\022\016im.turms.proto\"\320\001\n\022QueryGroupsReques"
-                + "t\022\021\n\tgroup_ids\030\001 \003(\003\022\036\n\021last_updated_dat"
-                + "e\030\002 \001(\003H\000\210\001\001\022\021\n\004name\030\003 \001(\tH\001\210\001\001\022\021\n\004skip\030"
-                + "\n \001(\005H\002\210\001\001\022\022\n\005limit\030\013 \001(\005H\003\210\001\001\022\033\n\023fields"
-                + "_to_highlight\030\014 \003(\005B\024\n\022_last_updated_dat"
-                + "eB\007\n\005_nameB\007\n\005_skipB\010\n\006_limitB=\n6im.turm"
-                + "s.server.common.access.client.dto.reques"
-                + "t.groupP\001\272\002\000b\006proto3"};
+                + "to\022\016im.turms.proto\032\030model/common/value.p"
+                + "roto\"\202\002\n\022QueryGroupsRequest\022\021\n\tgroup_ids"
+                + "\030\001 \003(\003\022\036\n\021last_updated_date\030\002 \001(\003H\000\210\001\001\022\021"
+                + "\n\004name\030\003 \001(\tH\001\210\001\001\022\021\n\004skip\030\n \001(\005H\002\210\001\001\022\022\n\005"
+                + "limit\030\013 \001(\005H\003\210\001\001\022\033\n\023fields_to_highlight\030"
+                + "\014 \003(\005\0220\n\021custom_attributes\030\017 \003(\0132\025.im.tu"
+                + "rms.proto.ValueB\024\n\022_last_updated_dateB\007\n"
+                + "\005_nameB\007\n\005_skipB\010\n\006_limitB=\n6im.turms.se"
+                + "rver.common.access.client.dto.request.gr"
+                + "oupP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryGroupsRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryGroupsRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryGroupsRequest_descriptor,
@@ -70,8 +74,10 @@ public final class QueryGroupsRequestOuterClass {
                                 "Name",
                                 "Skip",
                                 "Limit",
-                                "FieldsToHighlight",});
+                                "FieldsToHighlight",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
