@@ -26,7 +26,7 @@ public final class QueryGroupBlockedUserInfosRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryGroupBlockedUserInfosRequestOuterClass.class.getName());
     }
@@ -49,22 +49,27 @@ public final class QueryGroupBlockedUserInfosRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\nDrequest/group/blocklist/query_group_bl"
                 + "ocked_user_infos_request.proto\022\016im.turms"
-                + ".proto\"k\n!QueryGroupBlockedUserInfosRequ"
-                + "est\022\020\n\010group_id\030\001 \001(\003\022\036\n\021last_updated_da"
-                + "te\030\002 \001(\003H\000\210\001\001B\024\n\022_last_updated_dateBG\n@i"
-                + "m.turms.server.common.access.client.dto."
-                + "request.group.blocklistP\001\272\002\000b\006proto3"};
+                + ".proto\032\030model/common/value.proto\"\235\001\n!Que"
+                + "ryGroupBlockedUserInfosRequest\022\020\n\010group_"
+                + "id\030\001 \001(\003\022\036\n\021last_updated_date\030\002 \001(\003H\000\210\001\001"
+                + "\0220\n\021custom_attributes\030\017 \003(\0132\025.im.turms.p"
+                + "roto.ValueB\024\n\022_last_updated_dateBG\n@im.t"
+                + "urms.server.common.access.client.dto.req"
+                + "uest.group.blocklistP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryGroupBlockedUserInfosRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryGroupBlockedUserInfosRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryGroupBlockedUserInfosRequest_descriptor,
-                        new java.lang.String[]{"GroupId", "LastUpdatedDate",});
+                        new java.lang.String[]{"GroupId", "LastUpdatedDate", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
