@@ -26,7 +26,7 @@ public final class UpdateGroupInvitationRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 UpdateGroupInvitationRequestOuterClass.class.getName());
     }
@@ -49,27 +49,35 @@ public final class UpdateGroupInvitationRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\n>request/group/enrollment/update_group_"
                 + "invitation_request.proto\022\016im.turms.proto"
-                + "\032\036constant/response_action.proto\"\216\001\n\034Upd"
-                + "ateGroupInvitationRequest\022\025\n\rinvitation_"
-                + "id\030\001 \001(\003\0227\n\017response_action\030\002 \001(\0162\036.im.t"
-                + "urms.proto.ResponseAction\022\023\n\006reason\030\003 \001("
-                + "\tH\000\210\001\001B\t\n\007_reasonBH\nAim.turms.server.com"
-                + "mon.access.client.dto.request.group.enro"
-                + "llmentP\001\272\002\000b\006proto3"};
+                + "\032\036constant/response_action.proto\032\030model/"
+                + "common/value.proto\"\300\001\n\034UpdateGroupInvita"
+                + "tionRequest\022\025\n\rinvitation_id\030\001 \001(\003\0227\n\017re"
+                + "sponse_action\030\002 \001(\0162\036.im.turms.proto.Res"
+                + "ponseAction\022\023\n\006reason\030\003 \001(\tH\000\210\001\001\0220\n\021cust"
+                + "om_attributes\030\017 \003(\0132\025.im.turms.proto.Val"
+                + "ueB\t\n\007_reasonBH\nAim.turms.server.common."
+                + "access.client.dto.request.group.enrollme"
+                + "ntP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
                 new com.google.protobuf.Descriptors.FileDescriptor[]{
                         im.turms.server.common.access.client.dto.constant.ResponseActionOuterClass
+                                .getDescriptor(),
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UpdateGroupInvitationRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateGroupInvitationRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateGroupInvitationRequest_descriptor,
-                        new java.lang.String[]{"InvitationId", "ResponseAction", "Reason",});
+                        new java.lang.String[]{"InvitationId",
+                                "ResponseAction",
+                                "Reason",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
         im.turms.server.common.access.client.dto.constant.ResponseActionOuterClass.getDescriptor();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
