@@ -26,7 +26,7 @@ public final class QueryResourceUploadInfoRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryResourceUploadInfoRequestOuterClass.class.getName());
     }
@@ -40,8 +40,6 @@ public final class QueryResourceUploadInfoRequestOuterClass {
 
     static final com.google.protobuf.Descriptors.Descriptor internal_static_im_turms_proto_QueryResourceUploadInfoRequest_descriptor;
     static final com.google.protobuf.GeneratedMessage.FieldAccessorTable internal_static_im_turms_proto_QueryResourceUploadInfoRequest_fieldAccessorTable;
-    static final com.google.protobuf.Descriptors.Descriptor internal_static_im_turms_proto_QueryResourceUploadInfoRequest_ExtraEntry_descriptor;
-    static final com.google.protobuf.GeneratedMessage.FieldAccessorTable internal_static_im_turms_proto_QueryResourceUploadInfoRequest_ExtraEntry_fieldAccessorTable;
 
     public static com.google.protobuf.Descriptors.FileDescriptor getDescriptor() {
         return descriptor;
@@ -51,26 +49,26 @@ public final class QueryResourceUploadInfoRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\n8request/storage/query_resource_upload_"
                 + "info_request.proto\022\016im.turms.proto\032$cons"
-                + "tant/storage_resource_type.proto\"\317\002\n\036Que"
-                + "ryResourceUploadInfoRequest\0221\n\004type\030\001 \001("
-                + "\0162#.im.turms.proto.StorageResourceType\022\023"
-                + "\n\006id_num\030\002 \001(\003H\000\210\001\001\022\023\n\006id_str\030\003 \001(\tH\001\210\001\001"
-                + "\022\021\n\004name\030\004 \001(\tH\002\210\001\001\022\027\n\nmedia_type\030\005 \001(\tH"
-                + "\003\210\001\001\022H\n\005extra\030\006 \003(\01329.im.turms.proto.Que"
-                + "ryResourceUploadInfoRequest.ExtraEntry\032,"
-                + "\n\nExtraEntry\022\013\n\003key\030\001 \001(\t\022\r\n\005value\030\002 \001(\t"
-                + ":\0028\001B\t\n\007_id_numB\t\n\007_id_strB\007\n\005_nameB\r\n\013_"
-                + "media_typeB?\n8im.turms.server.common.acc"
-                + "ess.client.dto.request.storageP\001\272\002\000b\006pro"
-                + "to3"};
+                + "tant/storage_resource_type.proto\032\030model/"
+                + "common/value.proto\"\211\002\n\036QueryResourceUplo"
+                + "adInfoRequest\0221\n\004type\030\001 \001(\0162#.im.turms.p"
+                + "roto.StorageResourceType\022\023\n\006id_num\030\002 \001(\003"
+                + "H\000\210\001\001\022\023\n\006id_str\030\003 \001(\tH\001\210\001\001\022\021\n\004name\030\004 \001(\t"
+                + "H\002\210\001\001\022\027\n\nmedia_type\030\005 \001(\tH\003\210\001\001\0220\n\021custom"
+                + "_attributes\030\017 \003(\0132\025.im.turms.proto.Value"
+                + "B\t\n\007_id_numB\t\n\007_id_strB\007\n\005_nameB\r\n\013_medi"
+                + "a_typeB?\n8im.turms.server.common.access."
+                + "client.dto.request.storageP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
                 new com.google.protobuf.Descriptors.FileDescriptor[]{
                         im.turms.server.common.access.client.dto.constant.StorageResourceTypeOuterClass
+                                .getDescriptor(),
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
                                 .getDescriptor(),});
         internal_static_im_turms_proto_QueryResourceUploadInfoRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryResourceUploadInfoRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryResourceUploadInfoRequest_descriptor,
@@ -79,18 +77,11 @@ public final class QueryResourceUploadInfoRequestOuterClass {
                                 "IdStr",
                                 "Name",
                                 "MediaType",
-                                "Extra",});
-        internal_static_im_turms_proto_QueryResourceUploadInfoRequest_ExtraEntry_descriptor =
-                internal_static_im_turms_proto_QueryResourceUploadInfoRequest_descriptor
-                        .getNestedTypes()
-                        .get(0);
-        internal_static_im_turms_proto_QueryResourceUploadInfoRequest_ExtraEntry_fieldAccessorTable =
-                new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
-                        internal_static_im_turms_proto_QueryResourceUploadInfoRequest_ExtraEntry_descriptor,
-                        new java.lang.String[]{"Key", "Value",});
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
         im.turms.server.common.access.client.dto.constant.StorageResourceTypeOuterClass
                 .getDescriptor();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
