@@ -26,7 +26,7 @@ public final class UpdateMessageAttachmentInfoRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 UpdateMessageAttachmentInfoRequestOuterClass.class.getName());
     }
@@ -48,25 +48,29 @@ public final class UpdateMessageAttachmentInfoRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n<request/storage/update_message_attachm"
-                + "ent_info_request.proto\022\016im.turms.proto\"\224"
-                + "\003\n\"UpdateMessageAttachmentInfoRequest\022\036\n"
-                + "\021attachment_id_num\030\001 \001(\003H\000\210\001\001\022\036\n\021attachm"
-                + "ent_id_str\030\002 \001(\tH\001\210\001\001\022\"\n\025user_id_to_shar"
-                + "e_with\030\003 \001(\003H\002\210\001\001\022$\n\027user_id_to_unshare_"
-                + "with\030\004 \001(\003H\003\210\001\001\022#\n\026group_id_to_share_wit"
-                + "h\030\005 \001(\003H\004\210\001\001\022%\n\030group_id_to_unshare_with"
-                + "\030\006 \001(\003H\005\210\001\001B\024\n\022_attachment_id_numB\024\n\022_at"
-                + "tachment_id_strB\030\n\026_user_id_to_share_wit"
-                + "hB\032\n\030_user_id_to_unshare_withB\031\n\027_group_"
-                + "id_to_share_withB\033\n\031_group_id_to_unshare"
-                + "_withB?\n8im.turms.server.common.access.c"
-                + "lient.dto.request.storageP\001\272\002\000b\006proto3"};
+                + "ent_info_request.proto\022\016im.turms.proto\032\030"
+                + "model/common/value.proto\"\306\003\n\"UpdateMessa"
+                + "geAttachmentInfoRequest\022\036\n\021attachment_id"
+                + "_num\030\001 \001(\003H\000\210\001\001\022\036\n\021attachment_id_str\030\002 \001"
+                + "(\tH\001\210\001\001\022\"\n\025user_id_to_share_with\030\003 \001(\003H\002"
+                + "\210\001\001\022$\n\027user_id_to_unshare_with\030\004 \001(\003H\003\210\001"
+                + "\001\022#\n\026group_id_to_share_with\030\005 \001(\003H\004\210\001\001\022%"
+                + "\n\030group_id_to_unshare_with\030\006 \001(\003H\005\210\001\001\0220\n"
+                + "\021custom_attributes\030\017 \003(\0132\025.im.turms.prot"
+                + "o.ValueB\024\n\022_attachment_id_numB\024\n\022_attach"
+                + "ment_id_strB\030\n\026_user_id_to_share_withB\032\n"
+                + "\030_user_id_to_unshare_withB\031\n\027_group_id_t"
+                + "o_share_withB\033\n\031_group_id_to_unshare_wit"
+                + "hB?\n8im.turms.server.common.access.clien"
+                + "t.dto.request.storageP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_UpdateMessageAttachmentInfoRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateMessageAttachmentInfoRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateMessageAttachmentInfoRequest_descriptor,
@@ -75,8 +79,10 @@ public final class UpdateMessageAttachmentInfoRequestOuterClass {
                                 "UserIdToShareWith",
                                 "UserIdToUnshareWith",
                                 "GroupIdToShareWith",
-                                "GroupIdToUnshareWith",});
+                                "GroupIdToUnshareWith",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
