@@ -26,7 +26,7 @@ public final class DeleteFriendRequestRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 DeleteFriendRequestRequestOuterClass.class.getName());
     }
@@ -48,22 +48,27 @@ public final class DeleteFriendRequestRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n=request/user/relationship/delete_frien"
-                + "d_request_request.proto\022\016im.turms.proto\""
-                + "0\n\032DeleteFriendRequestRequest\022\022\n\nrequest"
-                + "_id\030\001 \001(\003BI\nBim.turms.server.common.acce"
-                + "ss.client.dto.request.user.relationshipP"
-                + "\001\272\002\000b\006proto3"};
+                + "d_request_request.proto\022\016im.turms.proto\032"
+                + "\030model/common/value.proto\"b\n\032DeleteFrien"
+                + "dRequestRequest\022\022\n\nrequest_id\030\001 \001(\003\0220\n\021c"
+                + "ustom_attributes\030\017 \003(\0132\025.im.turms.proto."
+                + "ValueBI\nBim.turms.server.common.access.c"
+                + "lient.dto.request.user.relationshipP\001\272\002\000"
+                + "b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_DeleteFriendRequestRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_DeleteFriendRequestRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_DeleteFriendRequestRequest_descriptor,
-                        new java.lang.String[]{"RequestId",});
+                        new java.lang.String[]{"RequestId", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
