@@ -26,7 +26,7 @@ public final class QueryRelationshipsRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryRelationshipsRequestOuterClass.class.getName());
     }
@@ -48,27 +48,33 @@ public final class QueryRelationshipsRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n;request/user/relationship/query_relati"
-                + "onships_request.proto\022\016im.turms.proto\"\234\001"
-                + "\n\031QueryRelationshipsRequest\022\020\n\010user_ids\030"
-                + "\001 \003(\003\022\024\n\007blocked\030\002 \001(\010H\000\210\001\001\022\025\n\rgroup_ind"
-                + "exes\030\003 \003(\005\022\036\n\021last_updated_date\030\004 \001(\003H\001\210"
-                + "\001\001B\n\n\010_blockedB\024\n\022_last_updated_dateBI\nB"
-                + "im.turms.server.common.access.client.dto"
-                + ".request.user.relationshipP\001\272\002\000b\006proto3"};
+                + "onships_request.proto\022\016im.turms.proto\032\030m"
+                + "odel/common/value.proto\"\316\001\n\031QueryRelatio"
+                + "nshipsRequest\022\020\n\010user_ids\030\001 \003(\003\022\024\n\007block"
+                + "ed\030\002 \001(\010H\000\210\001\001\022\025\n\rgroup_indexes\030\003 \003(\005\022\036\n\021"
+                + "last_updated_date\030\004 \001(\003H\001\210\001\001\0220\n\021custom_a"
+                + "ttributes\030\017 \003(\0132\025.im.turms.proto.ValueB\n"
+                + "\n\010_blockedB\024\n\022_last_updated_dateBI\nBim.t"
+                + "urms.server.common.access.client.dto.req"
+                + "uest.user.relationshipP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryRelationshipsRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryRelationshipsRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryRelationshipsRequest_descriptor,
                         new java.lang.String[]{"UserIds",
                                 "Blocked",
                                 "GroupIndexes",
-                                "LastUpdatedDate",});
+                                "LastUpdatedDate",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
